// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dispatches location-aware action, changes address bar + document.title 1`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/",
      "search": "",
      "state": Object {},
      "url": "/",
    },
  ],
  "hasSSR": false,
  "hash": "",
  "index": 0,
  "kind": "load",
  "length": 1,
  "params": Object {},
  "pathname": "/",
  "prev": Object {
    "basename": "",
    "entries": Array [],
    "hasSSR": false,
    "hash": "",
    "index": -1,
    "kind": "",
    "length": 0,
    "params": Object {},
    "pathname": "",
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "",
    "url": "",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "status": 404,
  "type": "@@rudy/NOT_FOUND",
  "url": "/",
}
`;

exports[`dispatches location-aware action, changes address bar + document.title 2`] = `
Object {
  "hash": "foo",
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
      Object {
        "hash": "foo",
        "key": "345678",
        "pathname": "/second/bar",
        "search": "",
        "state": Object {
          "foo": "bar",
        },
        "url": "/second/bar#foo",
      },
    ],
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/second/bar",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "state": Object {},
          "url": "/",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 404,
      "type": "@@rudy/NOT_FOUND",
      "url": "/",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second/bar#foo",
  },
  "params": Object {
    "param": "bar",
  },
  "query": Object {},
  "state": Object {
    "foo": "bar",
  },
  "type": "SECOND",
}
`;

exports[`dispatches location-aware action, changes address bar + document.title 3`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
      Object {
        "hash": "foo",
        "key": "345678",
        "pathname": "/second/bar",
        "search": "",
        "state": Object {
          "foo": "bar",
        },
        "url": "/second/bar#foo",
      },
    ],
    "hasSSR": false,
    "hash": "foo",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "param": "bar",
    },
    "pathname": "/second/bar",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "state": Object {},
          "url": "/",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 404,
      "type": "@@rudy/NOT_FOUND",
      "url": "/",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "foo": "bar",
    },
    "status": 200,
    "type": "SECOND",
    "url": "/second/bar#foo",
  },
  "title": "SECOND",
}
`;

exports[`dont double dispatch the same action 1`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/second/bar",
      "search": "",
      "state": Object {},
      "url": "/second/bar",
    },
  ],
  "hasSSR": false,
  "hash": "",
  "index": 0,
  "kind": "load",
  "length": 1,
  "params": Object {
    "param": "bar",
  },
  "pathname": "/second/bar",
  "prev": Object {
    "basename": "",
    "entries": Array [],
    "hasSSR": false,
    "hash": "",
    "index": -1,
    "kind": "",
    "length": 0,
    "params": Object {},
    "pathname": "",
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "",
    "url": "",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "status": 200,
  "type": "SECOND",
  "url": "/second/bar",
}
`;

exports[`user dispatches NOT_FOUND and middleware adds missing info to action 1`] = `
Object {
  "hash": "",
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/not-found",
        "search": "",
        "state": Object {},
        "url": "/not-found",
      },
    ],
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/not-found",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 404,
    "url": "/not-found",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "@@rudy/NOT_FOUND",
}
`;

exports[`user dispatches NOT_FOUND redirect and middleware adds missing info to action 1`] = `
Object {
  "hash": "",
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/not-found",
        "search": "",
        "state": Object {},
        "url": "/not-found",
      },
    ],
    "index": 0,
    "kind": "redirect",
    "length": 1,
    "pathname": "/not-found",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 302,
    "url": "/not-found",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "@@rudy/NOT_FOUND",
}
`;
